# slimurl

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  README_CN.md  docker-compose.benchmark.yml  docker-compose.yml
scripts/: README.md  benchmark.sh  profile_test.sh  quick_bench.sh  stress_test.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/db/: migrations.rs  mod.rs  pool.rs
src/handlers/: create.rs  mod.rs  qrcode.rs  redirect.rs  stats.rs
src/middleware/: cleanup.rs  mod.rs  rate_limit.rs  stats.rs
src/models/: link.rs  mod.rs  stats.rs  user.rs
src/services/: cache.rs  mod.rs
src/utils/: base62.rs  idgen.rs  mod.rs  ua_parser.rs
tests/: integration_test.rs
